# CifradosPraiseMelody

./: app.py  init_db.py  pyproject.toml  requirements.txt  songs.json
attached_assets/: Pasted--PROMPT-PARA-CREAR-UNA-APP-DE-ALABANZAS-CON-ACORDES-Y-AUDIO-EN-FLASK-REPLIT-Quiero-crear-una-app--1749678884308_1749678884308.txt
static/IMAGENES/: logo_b64.txt
static/css/: style.css
static/js/: app.js  chord_transposer.js
static/uploads/: .gitkeep
templates/: add_song.html  base.html  edit_song.html  index.html  login.html  presentation.html  pruebas.html  song_pdf.html  view_song.html
